--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,9 +15,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.1
 Imports: 
     MASS,
-    Rcpp
+    Rcpp,
+    nortest
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    covr
 LinkingTo: 
     Rcpp,
     RcppArmadillo
